--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input:checked ~ span {
+  @apply bg-mediumGrey;
+}
+input:checked + div svg {
+  @apply block;
+}
